--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="./js/lib/util.js"></script>
   <script src="./js/lib/dom.js"></script>
   <script src="./js/components/header.component.js"></script>
+  <script src="./js/components/npc.component.js"></script>
   <script src="./js/components/enemy.component.js"></script>
   <script src="./js/components/player.component.js"></script>
   <script src="./js/components/statusbar.component.js"></script>
